Home page - some fix mobile align for blocks.

--- a/src/scss/_components/home/_item.scss
+++ b/src/scss/_components/home/_item.scss
@@ -110,7 +110,7 @@
           justify-content: flex-start;
           padding-bottom: 0;
         }
-        @include adaptive(767) {
+        @include adaptive(575) {
           justify-content: center;
           padding-bottom: 13px;
         }
